syntax = 'proto3';

message News {
    string id = 1;
    string title = 2;
    string body = 3;
    string image = 4;
}

message String {
    string value = 1;
}

message Empty {}

message NewsList {
    repeated News news = 1;
}

service NewsService {
    rpc GetAllNews(Empty) returns (NewsList) {}
    rpc GetListNews(Empty) returns (stream News) {}
    rpc ReceiveListNews(stream News) returns (Empty) {}
    rpc StreamNews(stream News) returns (stream News){}
}

